--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -31,3 +31,19 @@ code {
     font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
     color: #009966;
 }
+
+h1 {
+    color: #330066;
+}
+h2 {
+    margin-top: 2em;
+    border-top: 1px solid #AAAAAA;
+    padding-top: 0.5em;
+}
+#uvod {
+    padding: 2em;
+    background-color: rgba(51, 0, 102, 0.1);
+}
+div {
+    border: 2px solid red;
+}
