--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -44,6 +44,14 @@ h2 {
     padding: 2em;
     background-color: rgba(51, 0, 102, 0.1);
 }
-div {
-    border: 2px solid red;
+.slika{
+    font-size: 0.9em;
+    width: 40%;
+    text-align: left;
+    float: right;
+    margin-left: 2em;
+}
+.slika img {
+    width: 100%;
+    height: auto;
 }
