dodal se ekstra stvari

--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -54,4 +54,14 @@ h2 {
 .slika img {
     width: 100%;
     height: auto;
+    border-radius: 50%;
+}
+.slika p:last-child {
+    font-size: 0.8em;
+    margin-top: 0.2em;
+}
+a::before {
+    content: "🔗 ";
+    color: #330066;
+    font-weight: bold;
 }
